# creatorweave

./: .gitignore  .rustfmt.toml  .vercelignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  LICENSE  Makefile  README.en.md  README.md  README.zh.md  SECURITY.md  USER_GUIDE.md  bfosa.pen  edgeone.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
.claude/: ralph-loop.local.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
browser-extension/: README.md  package.json  wxt.config.ts
browser-extension/entrypoints/: background.ts  content.ts  injected.content.ts  popup.html
browser-extension/entrypoints/popup/: index.html  main.ts
browser-extension/entrypoints/webmcp/: discovery.ts  invoke.ts  page-api.ts  plugin-download-transfer.ts  tool-name.ts  toolset-signature.ts  types.ts
browser-extension/public/: offscreen-tts.html  offscreen-tts.js
browser-extension/utils/: tts.ts
docs/: MCP_INTEGRATION_DESIGN.md  README.md  agent-system.md  design-spec-phase1.md  monorepo-architecture.md  pi-ai-integration-design.md  plugin-interaction-design.md  plugin-system-architecture.md  prd-phase1.md  sync-preview-feature-prd.md  update-summary.md  webcontainer-nextjs-integration-design.md
docs/architecture/: opfs-guide.md  overview.md  rust-wasm-flow.md
docs/design/: browser-interaction-enhancement.md  documentation-entry-design.md  llm-wiki-mvp-unified-spec.md  multi-root-project.md  subagent-prerequisite-for-llm-wiki.md  设计规范-20260208.md
docs/developer/architecture/: index.md  overview.md
docs/developer/guides/: ci-cd.md  index.md  mcp-page-outside-services.md  quick-start.md
docs/developer/reference/: README.md  index.md
docs/development/: README.md  ci-cd.md  pre-commit-hooks.md  quick-start.md  setup.md  ui-package-usage.md
docs/en/developer/: _index.json  ci-cd.md  (+3 more)
docs/ideas/: cross-workspace-conversation-search.md  draftfs-context-2026-03-13.md
docs/plans/: 2026-04-15-i18n-full-internationalization.md
docs/plugin-system/: iframe-rendering-guide.md  plugin-system-architecture.md
docs/relay-server/: remote-session-architecture.md
docs/requirements/: browser-extension-install-guide-prd.md
docs/skills/: builtin-skills-global-mount.md
docs/user/: assets.md  builtin-skills.md  getting-started.md  project-skills.md  sync.md  workspace.md
docs/workflow/: documentation-entry-workflow.md
mobile-web/: .gitignore  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
mobile-web/src/: App.tsx  crypto.ts  main.tsx  vite-env.d.ts
plugins/: README.md
relay-server/: package.json
relay-server/src/: index.ts  session-storage.ts
scripts/: build.sh  clean.sh  dev.sh  pre-commit-rust.sh  pre-commit.sh  setup-hooks.sh  setup.sh  test.sh  vercel-build.sh
test-webcontainer/: index.html  server.py
wasm/: Cargo.toml  eslint.config.js  package.json
wasm/crates/core/: Cargo.toml
wasm/crates/core/src/: accumulator.rs  lib.rs  stats.rs  types.rs
wasm/crates/example-plugins/html-demo/src/: lib.rs
wasm/crates/example-plugins/line-counter/src/: lib.rs
wasm/crates/example-plugins/md5-calculator/src/: lib.rs
wasm/crates/plugin-api/: Cargo.toml
wasm/crates/plugin-api/src/: abi.rs  lib.rs  tool_abi.rs  tool_types.rs  types.rs  validator.rs
wasm/crates/plugin-api/tests/: security_test.rs
wasm/crates/plugin-sdk/: Cargo.toml
wasm/crates/plugin-sdk/src/: host.rs  lib.rs
wasm/crates/wasm-bindings/: Cargo.toml
wasm/crates/wasm-bindings/src/: accumulator.rs  lib.rs
wasm/scripts/: build-wasm.sh  watch-wasm.sh
web/: .env.llm-gateway  .eslintrc.json  index.html  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite-plugin-docs-sync.ts  vite-plugin-extension-serve.ts  vite.config.ts
web/.claude/: ralph-loop.local.md  ralph-loop.local.md.disabled
web/cloud-functions/: [[default]].js
web/public/: diagnose-coop-coep.js  manifest.json  manifest.webmanifest.json  plugin-api-demo.html  plugin-test-html.html  plugin-test.html  sw.js  test-coop-coep.html  wasm-loader.js
web/src/: App.tsx  main.tsx  router.ts  streaming-bus.ts  sw.ts  test-setup.ts  vite-env.d.ts
(+770 files in other folders)
